fix background header image to be displayed properly on mobile browsers

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -11,6 +11,8 @@
 
 
 .header {
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-image: url("/images/header.png");
 }
